Release hygiene: license, headers, README status and limitations, configuration reference, CI (#466)
* license: the Apache-2.0 header on every Scala and Java source

* release hygiene: LICENSE (Apache-2.0), NOTICE, README status, requirements and limitations, the configuration reference

* ci: build-and-test workflow on push/PR, manual workflow for Spark's SQL golden suite

Added at the owner's explicit request and authorisation (the crew does not otherwise touch CI
configuration). CI runs the crew's gate command, mvn -Pcomet,iceberg verify; the golden suite wraps
benchmarks/scripts/run-spark-sql-tests.sh with filter, exclude and JVM-args inputs.

---------

Co-authored-by: Butterfly (Kiro Crew) <butterfly-crew@users.noreply.github.com>